--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,13 @@ body {
 .logo-accent {
   color: #000000;
 }
+.header-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-txt-color);
+}
+.header-link:hover,
+.header-link:focus {
+}
