--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,21 @@ body {
   font-family: var(--main-font);
   color: var(--main-txt-cl);
 }
-/*Кeset styles*/
+/*Reset styles*/
 .link {
   text-decoration: none;
 }
 .list {
   list-style: none;
+}
+/*Base styles*/
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-txt-color);
 }
 /*Header section*/
 .logo-link {
@@ -87,4 +96,58 @@ body {
   color: var(--light-bg-cl);
   cursor: pointer;
   background-color: var(--accent-txt-cl);
+}
+/*About section*/
+.about-subtitle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-txt-color);
+}
+.about-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+/*Team section*/
+.team-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-txt-color);
+}
+.team-desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.team {
+  background-color: var(--gray-bg-cl);
+}
+/*Footer section*/
+.footer {
+  background-color: var(--dark-bg-cl);
+}
+.footer-addres {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.footer-mail,
+.footer-tel {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
 }
