--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ body {
   color: var(--secondary-txt-color);
 }
 /*Header section*/
+.header {
+  background-color: var(--light-bg-cl);
+}
 .logo-link {
   font-family: 'Raleway';
   font-weight: 700;
@@ -135,6 +138,9 @@ body {
 .footer {
   background-color: var(--dark-bg-cl);
 }
+.footer-logo-accent {
+  color: var(--light-bg-cl);
+}
 .footer-addres {
   font-style: normal;
   font-weight: 400;
@@ -150,4 +156,38 @@ body {
   font-size: 14px;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+}
+/*Portfolio section*/
+.projects-btn {
+  font-family: inherit;
+  background-color: var(--gray-bg-cl);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-txt-color);
+  cursor: pointer;
+}
+.projects-btn:hover,
+.projects-btn:focus {
+  color: var(--light-bg-cl);
+  background-color: var(--accent-txt-cl);
+}
+.projects-btn-current {
+  color: var(--light-bg-cl);
+  background-color: var(--accent-txt-cl);
+}
+.projects-subtitle {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--secondary-txt-color);
+}
+.projects-desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--main-txt-cl);
 }
